fetch to s3 bucket

--- a/public/client.html
+++ b/public/client.html
@@ -31,6 +31,9 @@
                 search: "",
                 movieName:"",
                 movieYear:""
+            },
+            methods:{
+                
             }
         })
     </script>
