--- a/public/client.html
+++ b/public/client.html
@@ -11,13 +11,13 @@
 <body>
     <div id="app">
         <h1>AWS Cloud database app</h1>
-        <button v-on:click=this.console.log('Hi')>Create database</button>
+        <button v-on:click=create>Create database</button>
         <br>
         <input v-model="movieName" placeholder="Movie Name">
         <input v-model="movieYear" placeholder="Year">
-        <button v-on:click=this.console.log('Hi')>Query database</button>
+        <button v-on:click=query>Query database</button>
         <br>
-        <button v-on:click=this.console.log('Hi')>Delete database</button>
+        <button v-on:click=deleteDB>Delete database</button>
         <template>
         </template>
 
@@ -29,13 +29,40 @@
             data: {
                 message: "Hello test",
                 search: "",
-                movieName:"",
-                movieYear:""
+                movieName: "",
+                movieYear: "",
+                tableCreated: false
             },
-            methods:{
-                
+            methods: {
+                create: createDB,
+                query: queryDB,
+                deleteDB: deleteDB,
             }
         })
+
+
+        function createDB() {
+            let p = fetch('/create2');
+            p.then(response => response.json())
+                .then(response => {
+                    console.log(response);
+                    this.tableCreated = true;
+                });
+        }
+
+        function queryDB() {
+            let name = this.movieName;
+            let year = this.movieYear;
+        }
+
+        function deleteDB() {
+            let p = fetch('/delete');
+            p.then(response => response.json())
+                .then(response => {
+                    console.log(response)
+                    this.tableCreated = false;
+                });
+        }
     </script>
 </body>
 
