--- a/public/client.html
+++ b/public/client.html
@@ -16,11 +16,19 @@
             <br>
         </template>
         <template v-if="tableCreated">
+                <button v-on:click=query>Query database</button>
             <input v-model="movieName" placeholder="Movie Name">
             <input v-model="movieYear" placeholder="Year">
-            <button v-on:click=query>Query database</button>
             <br>
             <button v-on:click=deleteDB>Delete database</button>
+            <br>
+            <div class="movieInfo">
+                
+                <p v-for="item in movieData">
+                    {{item}}
+                </p>
+                <img v-bind:src="imageSrc"></div>
+            </div>
         </template>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -32,7 +40,9 @@
                 search: "",
                 movieName: "",
                 movieYear: "",
-                tableCreated: false
+                tableCreated: false,
+                movieData: [],
+                imageSrc: ''
             },
             methods: {
                 create: createDB,
@@ -58,7 +68,16 @@
             let p = fetch(`/query/${name}/${year}`);
             p.then(response => response.json())
                 .then(response => {
-                    console.log(response.data);
+
+                    //console.log(response.data.Items["year"]);
+
+                    let movie = response.data.Items;
+                    console.log(movie);
+                    this.imageSrc = movie[0]["info"]["image_url"];
+                    console.log(this.imageSrc);
+                    this.movieYear = null;
+                    this.movieName = null;
+                    this.movieData = movie[0]["info"];
                 });
         }
 
@@ -66,8 +85,10 @@
             let p = fetch('/delete');
             p.then(response => response.json())
                 .then(response => {
-                    console.log(response.data);
+                    console.log("Table deleted");
                     this.tableCreated = false;
+                    this.imageSrc = null;
+                    this.movieData = null;
                 });
         }
     </script>
